deploy/02_traefik.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-lb
  template:
    metadata:
      labels:
        app: traefik-lb
    spec:
      serviceAccountName: traefik-controller
      containers:
        - name: traefik
          image: traefik:v2.4.8
          imagePullPolicy: IfNotPresent
          args:
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.web.address=:8000
            - --experimental.kubernetesgateway
            - --providers.kubernetesgateway
            - --api.insecure
            - --certificatesresolvers.le.acme.email=le@dockerhack.me
            - --certificatesresolvers.le.acme.storage=/cert/acme.json
            - --certificatesResolvers.le.acme.httpChallenge.entryPoint=web  
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
      name: web
    - protocol: TCP
      port: 443
      targetPort: websecure
      name: websecure
    - protocol: TCP
      port: 8000
      targetPort: admin
      name: admin
  type: NodePort
